--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server --config bin/build/webpack.dev.conf.js",
-    "build": "webpack --mode production",
+    "build": " node bin/build/build.js",
     "start": "webpack-dev-server --config bin/build/webpack.dev.conf.js"
   },
   "dependencies": {
@@ -30,6 +30,7 @@
     "@babel/core": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
